# puchamon

./: .gitignore  GEMINI.md  README.md
backend/: README.md  list_dbs.py  puchamon_api.yaml  pyproject.toml  simulate_battle.py
backend/benchmark-results/: level3_ga_training.json  real_ai_benchmark.csv  real_ai_benchmark.json  real_ai_benchmark.md
backend/benchmark-results/150-por-fila/: real_ai_benchmark.csv  real_ai_benchmark.json  real_ai_benchmark.md
backend/benchmark-results/600-por-fila/: level3_ga_training_600.json  real_ai_benchmark.csv  real_ai_benchmark.json  real_ai_benchmark.md
backend/benchmark-results/80-por-fila/: real_ai_benchmark.csv  real_ai_benchmark.json  real_ai_benchmark.md
backend/benchmark-results/ga-training-30/: level3_ga_training.json  level3_ga_training.md
backend/benchmark-results/old/150-por-fila/: level3_ga_training_150.json  real_ai_benchmark.md
backend/benchmark-results/old/600-por-fila/: real_ai_benchmark.csv  real_ai_benchmark.md
backend/benchmark-results/old/80-por-fila/: real_ai_benchmark.csv  real_ai_benchmark.json  real_ai_benchmark.md
backend/scripts/: run_seeded_benchmark_150.py  run_seeded_benchmark_600.py  run_seeded_benchmark_80.py  run_seeded_ga_training.py  seeded_benchmark_runner.py
backend/src/puchamon/: factory.py  main.py
backend/src/puchamon/core/domain/: __init__.py  entities.py  exceptions.py
backend/src/puchamon/shared/: __init__.py
backend/src/puchamon/shared/api/: __init__.py  error_handlers.py  middlewares.py
backend/src/puchamon/shared/infrastructure/: __init__.py  config.py  database.py  logger.py
backend/tests/modules/agentia/domain/: test_action_selectors.py  test_genetic_algorithm.py  test_heuristics.py  test_minimax_move_selector.py  test_seeded_battle_benchmark.py  test_state_simulator.py
backend/tests/modules/agentia/integration/: test_seeded_real_ai_benchmark.py
docs/: README.md
(+198 files in other folders)
