[project]
name = "puchamon"
version = "0.0.0"
description = "Backend para Puchamon - una simulación de Pokémon en Python."
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "fastapi>=0.136.0",
    "loguru>=0.7.3",
    "uvicorn>=0.45.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "beanie>=2.1.0",
]

[project.scripts]
start = "puchamon.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ty.src]
exclude = ["**/tests/**"]

[tool.ruff]
line-length = 150
exclude = ["**/tests/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D", "PL", "B", "W", "ARG", "RUF", "UP", "PTH"]
ignore = ["D104", "D107", "D101", "D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
upload_to_vcs_release = true
upload_to_pypi = false
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "WUPHF <not-for-profit@openai.com>"

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
